deploy/kubernetes/manifests/lattice/30-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: sock-shop
    #namespace: sock-shop
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: catalogue
    protocol: HTTP
    port: 80
