deploy/kubernetes/manifests/lattice/31-front-end-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: front-end
  namespace: sock-shop
spec:
  parentRefs:
  - name: sock-shop
  rules:
  - backendRefs:  
    - name: front-end
      namespace: sock-shop
      kind: Service
      port: 80
      weight: 100
        #- name: front-end-canary
        #kind: Service
        #port: 80
        #weight: 0
