deploy/kubernetes/manifests/lattice/orders-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: orders
  namespace: sock-shop
spec:
  hostnames:
  - orders.sock-shop.lattice
  parentRefs:
  - name: sock-shop
    sectionName: orders
  rules:
  - backendRefs:  
    - name: orders
      #namespace: sock-shop
      kind: ServiceImport
      weight: 100
        #matches:
        #- path:
        #type: PathPrefix
        #value: /orders
